[package]
name = "mutif"
version = "0.1.0"
authors = ["DelusionalOptimist <54525605+DelusionalOptimist@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.0"
notify-rust = "4.0.0"
color-eyre = "0.5.7"
